# pycharge

./: .bandit  .codecov.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  example.py  mkdocs.yml  pyproject.toml  readthedocs.yaml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml
docs/: README.md  docs_requirements.txt  index.md  requirements-docs.txt
docs/api_reference/: charges-reference.md  dipole-reference.md  dipole_analyses-reference.md  simulation-reference.md  uml_diagram.md
docs/background_information/: coupled_LOs.md  lorentz_oscillators.md  point_charges.md
docs/getting_started/: dipoles.md  installation.md  introduction.md  oscillating_charge.md  stationary_charge.md
docs/howto/: animations.md  coupled_dipoles.md  custom_charges.md  moving_dipoles.md  mpi.md  pointing.md
docs/javascripts/: config.js
docs/source/: conf.py  index.rst
docs/source/_static/: custom-icon.js  hide_links.css
docs/source/api-reference/: index.rst
docs/source/examples/: animations.py  coupled_dipoles.py  current.py  current_coil.py  current_coil2.py  dipole_simulation.py  electric_field.py  pointing_vector.py  scalar_potential.py
docs/source/quickstart/: index.rst  quickstart.py
docs/source/user-guide/: coupled-LOs.rst  index.rst  lorentz-oscillators.rst  point-charges.rst  why-pycharge.rst
docs/source/user_guide/: coupled_LOs.rst  field.rst  index.rst  lorentz_oscillators.rst  numerical_issues.rst  point_charges.rst
examples/: GALLERY_HEADER.rst  animate_oscillating_charge.py  coupled_dipoles.py  current.py  current_coil.py  current_coil2.py  current_coil_magnetic_field.py  dipole_simulation.py  electric_field.py  external_field.py  free_particle_and_dipole_interaction.py  oscillating_animation.py  oscillating_charge.py  oscillating_dipole_fields.py  pointing_vector.py  s_dipoles.py  scalar_potential.py  simulate_coupled_dipoles.py  stationary_charge.py  stationary_dipole_fields.py
examples/paper_figures/: figure4.py  figure5.py  figure6.py  figure7.py  figure8.py  figure9.py
examples/point_charges/: animations.py
pycharge/: __init__.py  charge.py  charges.py  config.py  dipole.py  dipole_analyses.py  electromagnetic_quantities.py  potentials_and_fields.py  simulation.py  utils.py
pycharge/simulate/: __init__.py  interpolate_position.py  simulate.py  sources.py
pycharge/simulation/: simulation.py  source.py  sources.py
src/pycharge/: __init__.py  charge.py  config.py  electromagnetic_quantities.py  potentials_and_fields.py  quantities.py  simulate.py  sources.py  types.py  utils.py
src/pycharge/functional/: __init__.py  functional.py
tests/: test.py  test_charge.py  test_config.py  test_electromagnetic_quantities.py  test_functional.py  test_mpi.py  test_potentials.py  test_potentials_and_fields.py  test_quantities.py  test_simulate.py  test_sources.py  test_types.py  test_utils.py
